--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -42,7 +42,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: subinsebastian/learning-ui:dev-${{ steps.context.outputs.commit_sha }}
+          tags: subinsebastian/learning-ui:dev-${{ steps.context.outputs.commit_sha }}, subinsebastian/learning-ui
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
         # This ugly bit is necessary if you don't want your cache to grow forever
