--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -1,6 +1,9 @@
 name: Build Docker Image
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
 # Send --build-args from actions for node and nginx version
 
 jobs:
