--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -12,7 +12,7 @@ jobs:
           echo "##[set-output name=branch_name;]$(echo ${GITHUB_REF#refs/heads/})"
           echo "##[set-output name=commit_sha;]$(echo ${GITHUB_SHA: -7})"
       - name: Display the pushed image tags
-        run: echo "subinsebastian/learning-ui:dev-${{ steps.context.outputs.commit_sha }}, subinsebastian/learning-ui"
+        run: echo "subinsebastian/learning-ui:dev-${{ steps.context.outputs.commit_sha }}, subinsebastian/learning-ui on branch ${{ steps.context.outputs.branch_name }}"
       - name: Repository Dispatch
         uses: peter-evans/repository-dispatch@v1
         with:
