--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -10,7 +10,7 @@ jobs:
         id: context
         run: |
           echo "##[set-output name=branch_name;]$(echo ${GITHUB_REF#refs/heads/})"
-          echo "##[set-output name=commit_sha;]$(echo ${GITHUB_SHA: -7})"
+          echo "##[set-output name=commit_sha;]$(echo $(git describe --match= --always --dirty))"
       - name: Display the pushed image tags
         run: echo "subinsebastian/learning-ui:dev-${{ steps.context.outputs.commit_sha }}, subinsebastian/learning-ui on branch ${{ steps.context.outputs.branch_name }}"
       - name: Repository Dispatch
