--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -29,7 +29,7 @@ jobs:
         id: context
         run: |
           echo "##[set-output name=branch_name;]$(echo ${GITHUB_REF#refs/heads/})"
-          echo "##[set-output name=commit_sha;]$(echo ${GITHUB_SHA: -7})"
+          echo "::set-output name=commit_sha::$(git rev-parse --short HEAD)"
       - uses: docker/setup-buildx-action@v1
         id: buildx
         with:
